# SomosNLP2024-COSER-corpus

./: README.md  pyproject.toml
coser/: cli.py
coser/common/: utils.py
coser/common/configuration/: config.yaml  logger.yaml
coser/common/services/: CoserService.py  PromptVariations.py  VariatorOpenAi.py
coser/locations/controllers/: controller.py
coser/locations/services/: service.py
data/out_prompts/formulas/: provincia_COSER-0103-01.tagged.txt  provincia_COSER-0106-01.tagged.txt  provincia_COSER-0107-01.tagged.txt  provincia_COSER-0204-01.tagged.txt  provincia_COSER-0214-01.tagged.txt  provincia_COSER-0222-01.tagged.txt  provincia_COSER-0303-01.tagged.txt  provincia_COSER-0306-02.tagged.txt  provincia_COSER-0310-01.tagged.txt  provincia_COSER-0403-01.tagged.txt  provincia_COSER-0418-01.tagged.txt  provincia_COSER-0425-01.tagged.txt  provincia_COSER-0506-01.tagged.txt  provincia_COSER-0509-01.tagged.txt  provincia_COSER-0523-01.tagged.txt  provincia_COSER-0528-01.tagged.txt  provincia_COSER-0604-01.tagged.txt  provincia_COSER-0604-02.tagged.txt  provincia_COSER-0607-01.tagged.txt  provincia_COSER-0609-01.tagged.txt  provincia_COSER-0610-01.tagged.txt  provincia_COSER-0702-02.tagged.txt  provincia_COSER-0716-01.tagged.txt  provincia_COSER-0723-01.tagged.txt  provincia_COSER-0726-01.tagged.txt  provincia_COSER-0728-01.tagged.txt  (+190 more)
module/: cli.py
scripts/: Visualizacion.ipynb  ollama_provincias.py  parse_out_prompts.py
tests/system/: test_controllers.py  test_example.py  test_locations.py  test_prompting.py
tests/unit/: test_data.py  test_log.py
(+156 files in other folders)
