[project]
name = "pdm-plugin"
version = "0.0.0"
description = "A PDM plugin project"
authors = [{"name" = "Ãlvaro Bueno", email = "alvarobuenosaez@gmail.com"}]

dependencies = [
    "loguru>=0.7.2",
    "PyYAML>=6.0.1",
    "pandas>=2.2.1",
    "click>=8.1.7",
    "datasets>=2.18.0",
    "transformers>=4.38.2",
    "torch>=2.2.1",
    "sentencepiece>=0.2.0",
    "openai>=1.14.1",
]



requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest >= 8.1.0"
]

[tool.pytest.ini_options]
addopts = "-s"

[tool.setuptools]
py-modules = []

[tool.pytest]
log_cli = true
log_level = "DEBUG"